# problemdetailsmapper

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  custom_error_types.rs
src/: into_problemdetails.rs  lib.rs  mapper_error.rs  problemdetails_mapper.rs
src/builders/: mod.rs  problemdetails_builder.rs
src/errors/: mod.rs
src/mappers/: mod.rs  problemdetails_mapper.rs
src/tests/: builder_test.rs  mapper_test.rs  mod.rs
src/traits/: into_problemdetails.rs  mod.rs
